--- a/ds-security-oauth2/src/main/resources/application.yml
+++ b/ds-security-oauth2/src/main/resources/application.yml
@@ -1,11 +1,26 @@
 server:
-  port: 8081
+  port: 8082
   servlet:
-    context-path: /auth
-
+    context-path: /uaa
 spring:
   redis:
     host: 127.0.0.1
     database: 0
+  freemarker:
+    allow-request-override: false
+    allow-session-override: false
+    cache: true
+    charset: UTF-8
+    check-template-location: true
+    content-type: text/html
+    enabled: true
+    expose-request-attributes: false
+    expose-session-attributes: false
+    expose-spring-macro-helpers: true
+    prefer-file-system-access: true
+    suffix: .ftl
+    template-loader-path: classpath:/templates/
+logging:
+  level:
+    org.springframework: debug
 
-logging.level.org.springframework.security: DEBUG
